--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.4.1",
   "description": "Time Slider component for React",
   "author": "Elizaveta Shkodkina <lizashkodkina@gmail.com>",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "homepage": "https://github.com/lizashkod/react-time-range-slider",
   "repository": {
